Fixed broken css.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,7 @@
 
  @media screen and (min-width: 1079px) {
    .main {
-       width: 90%;
+       width: 60%;
        margin: 20px auto;
        border: 1px solid black;
    }
